--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif; 
+    background: linear-gradient(to bottom,rgb(250,250,250), rgb(165, 197, 244), rgb(139, 169, 180) );
 }
 
 html {
@@ -57,7 +58,10 @@ a:hover {
 }
 
 .logo {
-    font-size: 2rem;
+    font-size: 3.5rem;
+    letter-spacing: 0.5erem;
+    font-family: Courier New, monospace;
+    font-weight: 500;
 
 }
 
@@ -69,14 +73,15 @@ a:hover {
 
 #hamburger-nav {
     display: none;
+    
 }
 
-.hamburger.menu {
+.hamburger-menu {
     position: relative;
     display: inline-block;
 }
 
-.hamburger.icon {
+.hamburger-icon {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -85,9 +90,9 @@ a:hover {
   cursor: pointer;
 }
 
-.hamburger.icon span {
+.hamburger-icon span {
     width: 100%;
-    height: 2px;
+    height: 0.4rem;
     background-color: black;
     transition: all 0.3 ease-in-out;
 }
@@ -95,26 +100,35 @@ a:hover {
 .menu-links {
     position: absolute;
     top: 100%;
-    right:0%;
+    right: 0;
     background-color: white;
     width: fit-content;
     max-height: 0;
     overflow: hidden;
     transition: all 0.3 ease-in-out;
+    box-shadow: 0 0 1.5rem rgba(0,0,0, 0.4);
 }
 
 .menu-links a {
     display:block;
-    padding: 10px;
+    padding: 0;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: black;
     text-decoration: none;
     transition: all 0.3 ease-in-out;
 }
-
-.menu-links li {
+.menu-links ul {
     list-style: none;
+    padding: 2rem 0rem;
+
+}
+.menu-links li {
+    padding: 0.3rem 2rem;
+
+}
+.menu-links li:hover {
+    background-color: #ededed;
 
 }
 
@@ -122,15 +136,15 @@ a:hover {
   max-height: 300px;
 }
 
-.hamburger.icon.open span:first-child {
+.hamburger-icon.open span:first-child {
   transform: rotate(45deg) translate(10px, 5px);
 }
 
-.hamburger.icon.open span:nth-child(2) {
+.hamburger-icon.open span:nth-child(2) {
  opacity: 0;
 }
 
-.hamburger.icon.open span:last-child {
+.hamburger-icon.open span:last-child {
   transform: rotate(-45deg) translate(10px, -5px);
 }
 
@@ -163,20 +177,45 @@ section {
 
 /*Profile section*/
 
+
+.profile-pic {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 30%;
+    height: 20%;
+    margin: auto;
+    margin-top: 6rem;
+    
+  }
+
+  .my-pic {
+    border: 4rem solid none; 
+  }
+
+
 #profile {
+ 
+  padding: 1rem;
   display: flex;
   justify-content: center;
-  gap: 5rem;
-  height: 80vh;
+  align-items: flex-end;
+  
   }
  
   .section__pic-container {
+    
+    overflow: hidden; 
     display: flex;
-    height: 400px;
-    width: 400px;
     margin: auto 0;
+    border: 0.5rem solid grey;
+    border-radius: 1rem;
+    justify-content: center;
+   
+      
   }
 
+  
 .section__text {
     align-self: center;
     text-align: center;
@@ -196,11 +235,11 @@ section {
 }
 
 .title {
-    font-size: 3rem;
+    font-size: 2rem;
     text-align: center;
 }
 
-#sosials-container {
+#socials-container {
     display: flex;
     justify-content: center;
     margin-top: 1rem;
@@ -243,7 +282,7 @@ section {
 .btn-color-1,
 .btn-color-2:hover {
     background: rgb( 53, 53, 53);
-    color: aliceblue;
+    color:#ededed;
 
 }
 
@@ -263,8 +302,193 @@ section {
     gap: 1rem;
 }
 
-img {
-    border-radius: 65%;
+
+/*About section*/
+
+#about {
+    position: relative;
 }
+
+.about-pic {
+    overflow: hidden; 
+    display: flex;
+    margin: auto;
+    border: 0.5rem solid none;
+    border-radius: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    height: 20rem;
+    width: 24rem;
+}
+
+.about-containers {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+}
+
+.about-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.about-containers, .about-details-container {
+    display: flex;
+   
+}
+.text-container {
+    padding-bottom: 8rem;
+}
+
+
+.arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+}
+
+.details-container {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border:rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163 163);
+    text-align: center;
+}
+
+.section-container {
+    gap: 2rem;
+    height: 80%;
+}
+
+.section__pic-container {
+  width: 18rem;
+  height: 18rem;
+  margin: auto 0;
+}
+
+/*Experience Section*/
+
+#experience {
+    position: relative;
+
+}
+
+.experience-sub-title {
+    color: rgb( 85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    gap: 2.5rem;
+    justify-content: space-around;
+    
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
+}
+
+/*Project Section*/
+
+#projects {
+    position: relative;
+}
+
+.project-container {
+    border-color:rgb(163, 163 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title  {
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163, 163 163);
+}
+
+/*Contact*/
+
+#contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb( 53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container {
+    display: flex ;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+}
+
+.email-icon {
+    height: 2.5rem;
+}
+
+/*Footer Section*/
+
+footer {
+    height: 26vh;
+    margin: 0 1rem;  
+}
+
+footer p {
+    text-align: center;
+}
+
 
 
