--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif; 
-    background: linear-gradient(to bottom,rgb(250,250,250), rgb(165, 197, 244), rgb(139, 169, 180) );
+    background: linear-gradient(to bottom, rgb(250,250,250), rgb(179, 189, 204), rgb(139, 169, 180));
 }
 
 html {
@@ -35,10 +35,11 @@ nav, .nav-links {
 }
 
 nav {
-    background-color: rgb(56, 51, 51);
+    background: linear-gradient(to top, rgb(157, 168, 173), rgb(62, 64, 68), rgb(44, 56, 60));
     justify-content: space-around;
     align-items: center;
-    padding: 2rem 0;
+    padding: 2.4rem 0;
+   
    
 }
 
@@ -57,10 +58,10 @@ a {
 }
 
 a:hover {
-    color: rgb(113, 138, 238);
+    color: rgb(246, 247, 250);
     text-decoration: underline;
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(161, 184, 248)
+    text-decoration-color: rgb(119, 121, 126)
 }
 
 .logo {
@@ -80,11 +81,14 @@ a:hover {
 #hamburger-nav {
     display: none;
     
+    
+    
 }
 
 .hamburger-menu {
     position: relative;
     display: inline-block;
+    
 }
 
 .hamburger-icon {
@@ -101,6 +105,7 @@ a:hover {
     height: 0.4rem;
     background-color: black;
     transition: all 0.3 ease-in-out;
+    color: rgb(250, 250, 250);
 }
 
 .menu-links {
@@ -189,6 +194,7 @@ section {
     align-items: flex-end;
     width: 30%;
     margin: auto;
+    margin-top: 3rem ;
 
     
   }
