--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif; 
-    background: linear-gradient(to bottom, rgb(250,250,250), rgb(179, 189, 204), rgb(139, 169, 180));
+    background: linear-gradient(to bottom, rgb(250,250,250), rgb(235, 241, 249), rgb(139, 169, 180));
 }
 
 html {
@@ -31,42 +31,44 @@ a, .btn {
 
 nav, .nav-links {
   display: flex;
-  color: aliceblue;
+  color: rgb(25, 26, 28);
+  
 }
 
 nav {
-    background: linear-gradient(to top, rgb(157, 168, 173), rgb(62, 64, 68), rgb(44, 56, 60));
+    background: linear-gradient(to top, rgb(85, 85, 85), rgb(250, 250, 250), rgb(85, 85, 85));
     justify-content: space-around;
     align-items: center;
     padding: 2.4rem 0;
-   
-   
+      
 }
+
 
 .nav-links {
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
     
-
 }
 
 a {
-  color: rgb(180, 174, 174);
+  color: rgb(32, 30, 30);
   text-decoration: none;
   text-decoration-color: rgb(76, 76, 77);
 }
 
 a:hover {
-    color: rgb(246, 247, 250);
+    color: rgb(243, 243, 247);
+    text-transform: none;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
     text-decoration: underline;
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(119, 121, 126)
+    text-decoration-color: rgb(49, 51, 56)
 }
 
 .logo {
     font-size: 5rem;
-    letter-spacing: 0.5erem;
+    letter-spacing: 0.3rem;
     font-family: Courier New, monospace;
     font-weight: 500;
 
@@ -105,14 +107,14 @@ a:hover {
     height: 0.4rem;
     background-color: black;
     transition: all 0.3 ease-in-out;
-    color: rgb(250, 250, 250);
+    color: rgb(250, 249, 249);
 }
 
 .menu-links {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: white;
+    background-color: rgb(251, 249, 249);
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -182,6 +184,7 @@ section {
 }
 
 .section-container {
+    
     display: flex;
 }
 
@@ -190,6 +193,7 @@ section {
 
 .profile-pic {
     display: flex;
+    opacity: 0.7;
     justify-content: center;
     align-items: flex-end;
     width: 30%;
@@ -211,6 +215,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  
   
   }
  
@@ -237,6 +242,7 @@ section {
 
 .section__text__p1 {
     text-align: center;
+    margin: 1rem;
 }
 
 
@@ -251,6 +257,7 @@ section {
 }
 
 #socials-container {
+   
     display: flex;
     justify-content: center;
     margin-top: 1rem;
@@ -323,6 +330,7 @@ section {
 .about-pic {
     overflow: hidden; 
     display: flex;
+    opacity: 0.7;
     margin: auto;
     border: 0.5rem solid none;
     border-radius: 1rem;
@@ -363,7 +371,7 @@ section {
 .details-container {
     padding: 1.5rem;
     flex: 1;
-    background: white;
+    background: linear-gradient(to left, rgb(85, 85, 85), rgb(250, 250, 250), rgb(85, 85, 85));
     border-radius: 2rem;
     border:rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163 163);
@@ -409,6 +417,7 @@ section {
     gap: 2.5rem;
     justify-content: space-around;
     
+    
 }
 
 article {
@@ -428,8 +437,8 @@ article .icon {
 
 .project-container {
     border-color:rgb(163, 163 163);
-    background: rgb(250, 250, 250);
-}
+    background: rgb(250,250,250);
+}   
 
 .project-img {
     border-radius: 2rem;
@@ -459,10 +468,10 @@ article .icon {
 .contact-info-upper-container {
     display: flex;
     justify-content: center;
-    border-radius: 2rem;
-    border: rgb(219, 214, 214) 0.1rem solid;
+    border-radius: 1rem;
+    border: rgb(4, 4, 4) 0.1rem solid;
     border-color: rgb(163, 163 163);
-    background: rgb(250, 250, 250);
+    background: linear-gradient(to left, rgb(85, 85, 85), rgb(250, 250, 250), rgb(85, 85, 85));
     margin: 2rem auto;
     padding: 0.5rem;
     
@@ -473,30 +482,37 @@ article .icon {
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
-    margin: 1rem;
+    margin: 1rem;   
+    
 }
 
 .contact-info-container p {
     font-size: larger;
+    
 }
 
 .contact-icon {
     cursor: default;
+   
 }
 
 .email-icon {
     height: 2.5rem;
+    
 }
 
 /*Footer Section*/
 
 footer {
     height: 26vh;
-    margin: 0 1rem;  
+    margin: 0 1rem; 
+    
 }
 
 footer p {
     text-align: center;
+    margin-top: 2rem;
+    
 }
 
 
