--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif; 
-    background: linear-gradient(to bottom, rgb(250,250,250), rgb(235, 241, 249), rgb(139, 169, 180));
+    background: linear-gradient(to bottom , #e6e7e9, #8ca7a7);
 }
 
 html {
@@ -36,7 +36,7 @@ nav, .nav-links {
 }
 
 nav {
-    background: linear-gradient(to top, rgb(85, 85, 85), rgb(250, 250, 250), rgb(85, 85, 85));
+    background-image: linear-gradient(to bottom right, #4a4c4c, #e6e7e9, #4a4c4c);
     justify-content: space-around;
     align-items: center;
     padding: 2.4rem 0;
@@ -371,7 +371,8 @@ section {
 .details-container {
     padding: 1.5rem;
     flex: 1;
-    background: linear-gradient(to left, rgb(85, 85, 85), rgb(250, 250, 250), rgb(85, 85, 85));
+    background: linear-gradient(to left, rgb(85, 85, 85), rgb(250, 250, 250), rgb(85, 85, 85)); 
+    opacity: 0.8;
     border-radius: 2rem;
     border:rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163 163);
@@ -472,6 +473,7 @@ article .icon {
     border: rgb(4, 4, 4) 0.1rem solid;
     border-color: rgb(163, 163 163);
     background: linear-gradient(to left, rgb(85, 85, 85), rgb(250, 250, 250), rgb(85, 85, 85));
+    opacity: 0.8;
     margin: 2rem auto;
     padding: 0.5rem;
     
