--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif; 
-    background: linear-gradient(to bottom , #fafafb, #a3ccf5);
+    background-color: rgb(247, 250, 251);
 }
 
 html {
