--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 body {
     font-family: 'Poppins', sans-serif; 
     background-color: rgb(247, 250, 251);
+   
 }
 
 html {
@@ -186,24 +187,30 @@ section {
 .section-container {
     
     display: flex;
+   
 }
 
 /*Profile section*/
 
 
 .profile-pic {
+    overflow: hidden;
     display: flex;
-    opacity: 0.8;
     justify-content: center;
-    align-items: flex-end;
-    width: 100%;
-    margin: auto;
-    margin-top: 3rem ;
+    flex-wrap: wrap;
+    opacity: 0.8;
+    margin-top: 3rem;
 
+   
+}
+   
     
-  }
+  
 
+ 
 
+  
+  
 
 
 #profile {
@@ -211,9 +218,7 @@ section {
   padding: 1rem;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  
-  
+ 
   }
  
   .section__pic-container {
