--- a/style.css
+++ b/style.css
@@ -205,17 +205,11 @@ section {
     flex-wrap: wrap;
     opacity: 0.8;
     margin-top: 3rem;
+   
 
    
 }
    
-    
-  
-
- 
-
-  
-  
 
 
 #profile {
@@ -349,13 +343,13 @@ section {
     display: flex;
     opacity: 0.7;
     margin: auto;
-    border: 0.5rem solid none;
-    border-radius: 1rem;
     justify-content: center;
     align-items: center;
     padding-bottom: 1rem;
     padding-top: 1rem;
-    width: 60%;
+    width: 40%;
+    border-radius: 50%;
+   
 }
 
 .about-containers {
