--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto:ital,wght@0,300;1,900&family=Space+Mono&family=Work+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto:ital,wght@0,300;1,900&family=Space+Mono&family=Work+Sans:wght@200&display=swap');
 
 
 * {
@@ -199,14 +199,11 @@ section {
 
 
 .profile-pic {
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    opacity: 0.8;
-    margin-top: 3rem;
-   
-
+   width: 50%;
+   margin-left: auto;
+   margin-right: auto;
+   opacity: 0.9;
+   margin-top: 1rem;
    
 }
    
@@ -536,6 +533,3 @@ footer p {
   
     
 }
-
-
-
