--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif; 
-    background-color: rgb(247, 250, 251);
+    background-color: #fff;
    
 }
 
@@ -70,10 +70,12 @@ a:hover {
 }
 
 .logo {
-    font-size: 5rem;
-    letter-spacing: 0.2rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 500;
+    font-size: 5.6rem;
+    letter-spacing: 0.35rem;
+    color: #fff;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 1px 1px 2px #000;
+    font-weight: 400;
 
 }
 
@@ -199,7 +201,7 @@ section {
 
 
 .profile-pic {
-   width: 50%;
+   width: 75%;
    margin-left: auto;
    margin-right: auto;
    opacity: 0.9;
