--- a/style.css
+++ b/style.css
@@ -206,6 +206,12 @@ section {
    margin-right: auto;
    opacity: 0.9;
    margin-top: 1rem;
+   position: relative;
+   z-index: -1;
+   overflow-y: hidden;
+
+
+  
    
 }
    
